--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 226.5 100% 93.9%;
     --foreground: 224 71.4% 4.1%;
     --card: 0 0% 100%;
     --card-foreground: 224 71.4% 4.1%;
@@ -38,16 +38,24 @@ body {
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+    --chart-6: 226.5 100% 93.9%;
     --radius: 0.5rem;
+
+    --btn-primary:27 87% 67%;
+    --btn-primary-hover: 340 75% 55%;
+
+    --test-1:0 0% 9%;
+    --test-2:257 66.7% 50.6%;
+    --test-3:0 0% 9%;
   }
   .dark {
-    --background: 224 71.4% 4.1%;
+    --background: 257 66.7% 50.6%;
     --foreground: 210 20% 98%;
     --card: 224 71.4% 4.1%;
     --card-foreground: 210 20% 98%;
     --popover: 224 71.4% 4.1%;
     --popover-foreground: 210 20% 98%;
-    --primary: 210 20% 98%;
+    --primary: 214.3 31.8% 91.4%;
     --primary-foreground: 220.9 39.3% 11%;
     --secondary: 215 27.9% 16.9%;
     --secondary-foreground: 210 20% 98%;
@@ -65,6 +73,14 @@ body {
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+    --chart-6: 257 100% 63.5%;
+
+    --btn-primary:340 75% 55%;
+    --btn-primary-hover: 12 76% 61%;
+
+    --test-1:0 0% 9%;
+    --test-2:257 66.7% 50.6%;
+    --test-3:0 0% 3.9%;
   }
 }
 
